--- a/ex00/package.json
+++ b/ex00/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "ex00",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
-    "expo": "~51.0.8",
+    "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
