--- a/Piscine Mobile - 1 Structure and logic/pp/package.json
+++ b/Piscine Mobile - 1 Structure and logic/pp/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -16,6 +16,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3",
     "react-native-responsive-sizes": "^2.0.4",
     "react-native-safe-area-context": "4.10.1"
   },
