--- a/Piscine Mobile - 1 Structure and logic/pp/package.json
+++ b/Piscine Mobile - 1 Structure and logic/pp/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
     "expo-status-bar": "~1.12.1",
@@ -18,7 +23,8 @@
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.3",
     "react-native-responsive-sizes": "^2.0.4",
-    "react-native-safe-area-context": "4.10.1"
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-svg": "^15.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
