--- a/Piscine Mobile - 1 Structure and logic/pp/app.json
+++ b/Piscine Mobile - 1 Structure and logic/pp/app.json
@@ -17,8 +17,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
+        "backgroundColor": "#ffffff",
+        "translucent": true
+      },
+      "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
       "favicon": "./assets/favicon.png"
