--- a/Piscine Mobile - 1 Structure and logic/pp/package.json
+++ b/Piscine Mobile - 1 Structure and logic/pp/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
     "expo-status-bar": "~1.12.1",
@@ -24,7 +25,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-responsive-sizes": "^2.0.4",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-svg": "^15.3.0"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
