--- a/Piscine Mobile - 1 Structure and logic/mobileWeatherApp/app.json
+++ b/Piscine Mobile - 1 Structure and logic/mobileWeatherApp/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
-    "name": "my-app",
-    "slug": "my-app",
+    "name": "mobileWeatherApp",
+    "slug": "mobileWeatherApp",
+    "scheme":"mobileWeatherApp",
     "version": "1.0.0",
-    "orientation": "default",
+    "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -22,6 +23,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
