--- a/Piscine Mobile - 1 Structure and logic/mobileWeatherApp/package.json
+++ b/Piscine Mobile - 1 Structure and logic/mobileWeatherApp/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-app",
+  "name": "mobileweatherapp",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,14 +10,24 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@types/d3-shape": "^3.1.6",
+    "d3-shape": "^3.2.0",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.15",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-responsive-sizes": "^2.0.4",
-    "react-native-safe-area-context": "4.10.1"
+    "react-native-reanimated": "~3.10.1",
+    "react-native-redash": "^18.1.3",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
