--- a/Piscine Mobile - 1 Structure and logic/mobileWeatherApp/package.json
+++ b/Piscine Mobile - 1 Structure and logic/mobileWeatherApp/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@types/d3-shape": "^3.1.6",
@@ -22,16 +27,18 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-animatable": "^1.4.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "file-loader": "^6.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
