--- a/Piscine Mobile - 1 Structure and logic/pp/package.json
+++ b/Piscine Mobile - 1 Structure and logic/pp/package.json
@@ -25,7 +25,8 @@
     "react-native-paper": "^5.12.3",
     "react-native-responsive-sizes": "^2.0.4",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "^15.2.0",
+    "react-native-reanimated": "~3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
