--- a/Piscine Mobile - 1 Structure and logic/mobileWeatherApp/package.json
+++ b/Piscine Mobile - 1 Structure and logic/mobileWeatherApp/package.json
@@ -31,8 +31,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
